# ChangeLog for perl-core/ExtUtils-CBuilder
# Copyright 2000-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/perl-core/ExtUtils-CBuilder/ChangeLog,v 1.2 2009/01/11 15:06:36 tove Exp $

  11 Jan 2009; Torsten Veller <tove@gentoo.org>
  ExtUtils-CBuilder-0.19.ebuild:
  Remove Module-Build from RDEPEND (#246942)

  01 Nov 2008; Torsten Veller <tove@gentoo.org> +metadata.xml,
  +ExtUtils-CBuilder-0.19.ebuild, +ExtUtils-CBuilder-0.23.ebuild,
  +ExtUtils-CBuilder-0.24.ebuild:
  dev-perl => perl-core migration

  01 Nov 2008; Torsten Veller <tove@gentoo.org>
  ExtUtils-CBuilder-0.19.ebuild, ExtUtils-CBuilder-0.23.ebuild,
  ExtUtils-CBuilder-0.24.ebuild:
  New virtuals: module-build

  15 Sep 2008; Torsten Veller <tove@gentoo.org>
  -ExtUtils-CBuilder-0.15.ebuild, -ExtUtils-CBuilder-0.18.ebuild:
  Cleanup

*ExtUtils-CBuilder-0.24 (23 Aug 2008)

  23 Aug 2008; Torsten Veller <tove@gentoo.org>
  +ExtUtils-CBuilder-0.24.ebuild:
  Version bump

  15 Jul 2008; Raúl Porcel <armin76@gentoo.org>
  ExtUtils-CBuilder-0.23.ebuild:
  alpha/ia64/sparc/x86 stable

*ExtUtils-CBuilder-0.23 (30 Apr 2008)

  30 Apr 2008; Torsten Veller <tove@gentoo.org>
  +ExtUtils-CBuilder-0.23.ebuild:
  Version bump.

  28 Mar 2008; Jeroen Roovers <jer@gentoo.org>
  ExtUtils-CBuilder-0.19.ebuild:
  Stable for HPPA too.

  29 Dec 2007; <welp@gentoo.org> ExtUtils-CBuilder-0.19.ebuild:
  Keyworded ~sparc-fbsd; bug 203655

  10 Nov 2007; Samuli Suominen <drac@gentoo.org>
  ExtUtils-CBuilder-0.19.ebuild:
  amd64 stable

  09 Aug 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  ExtUtils-CBuilder-0.19.ebuild:
  Stable on ppc.

  07 Jul 2007; Tom Gall <tgall@gentoo.org>
  ExtUtils-CBuilder-0.19.ebuild:
  stable on ppc64

  06 Jul 2007; Raúl Porcel <armin76@gentoo.org>
  ExtUtils-CBuilder-0.19.ebuild:
  alpha/ia64/x86 stable

  30 Jun 2007; Joshua Kinard <kumba@gentoo.org>
  ExtUtils-CBuilder-0.19.ebuild:
  Stable on mips.
