@@ -1,0 +1,18 @@
+# Copyright 1999-2009 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/perl-core/ExtUtils-CBuilder/ExtUtils-CBuilder-0.25.ebuild,v 1.1 2009/06/27 08:20:22 tove Exp $
+
+MODULE_AUTHOR=DAGOLDEN
+inherit perl-module
+
+DESCRIPTION="Compile and link C code for Perl modules"
+
+SLOT="0"
+KEYWORDS="~x86-freebsd ~x86-interix ~amd64-linux ~ia64-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~sparc-solaris ~sparc64-solaris ~x64-solaris ~x86-solaris"
+IUSE=""
+
+RDEPEND="dev-lang/perl"
+DEPEND="${RDEPEND}
+	virtual/perl-Module-Build"
+
+SRC_TEST="do"
