@@ -1,4 +1,6 @@
 DIST ExtUtils-CBuilder-0.24.tar.gz 23639 RMD160 92c9b32126369228008bae295849abb7f0bfb6cb SHA1 a20414dc6f1a81a3b5f8f6da1e17416a494849ec SHA256 df40cdd6eeb4d62136dd47481522f6eb66095f15e92f1a916d2451156d868b9c
+DIST ExtUtils-CBuilder-0.25.tar.gz 22412 RMD160 f7104f7b9c8119fcb7eb85fc6dc6305d17071e8b SHA1 104f7c4e32ca26d1ced69bf5e5bdb076283d128f SHA256 7d3b77733d88a351e7c8035c91f558fe0e969ec902cca905e9bb8c3da55a1889
 EBUILD ExtUtils-CBuilder-0.24.ebuild 640 RMD160 0ef18111b747d57d76acb9b29c9fe40ebf469ff7 SHA1 a969758bb94cef3597ddb79ccd16cc71901961bc SHA256 56c8273eb2c2cf435bc65bc3371a0b7cc907d757dd1a0cae62f0544e76813858
-MISC ChangeLog 7193 RMD160 182c93965dfd5117980af408581ab1bf5126a4f0 SHA1 ec045b8b35afd7641c28d90cac9f8b3b90239ee9 SHA256 438d2ac998e2cb286ab3f3e70c1befbc5d1a6eeae211ffed4616a550b15d5c2e
+EBUILD ExtUtils-CBuilder-0.25.ebuild 606 RMD160 77c87857a44ee6d8cef2c2c56839b5a60c0b5e2e SHA1 eedabef30dc4340e34141d745ad0e91177bf7e4f SHA256 c05ac2bdb4a5b56dfb11b7acafa4ef15ca2eccee9b6b9e43a619659b061a0f8e
+MISC ChangeLog 7330 RMD160 9548808d6ba3234b2b7c8f65fd05b16127261e19 SHA1 2945cda992c271ae36c508a0398ae04420b6fa48 SHA256 21d35485bc5eabc24753e3cb386f20d4182b7fb6a4fa08e8ae2477f6bcbb8abb
 MISC metadata.xml 158 RMD160 03e4d8164c58bc61660cbaf489d4e3652de0feb7 SHA1 9a84117c6fb70288426e20c84deaf16f4381a549 SHA256 1fef4c0af5f71b777110f54d9dfbd27d6c85c750fca007f4a2fb38345ebbb710
