@@ -1,6 +1,12 @@
 # ChangeLog for perl-core/ExtUtils-CBuilder
-# Copyright 2000-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/perl-core/ExtUtils-CBuilder/ChangeLog,v 1.2 2009/01/11 15:06:36 tove Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/perl-core/ExtUtils-CBuilder/ChangeLog,v 1.3 2009/06/27 08:20:22 tove Exp $
+
+*ExtUtils-CBuilder-0.25 (27 Jun 2009)
+
+  27 Jun 2009; Torsten Veller <tove@gentoo.org>
+  +ExtUtils-CBuilder-0.25.ebuild:
+  Version bump
 
   11 Jan 2009; Torsten Veller <tove@gentoo.org>
   ExtUtils-CBuilder-0.19.ebuild:
